<resources>
    <string name="app_name">CLIQGRAM</string>

    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_logout">Log out</string>

    <!-- camera-->
    <string name="test_info">This is the test activity for photo taking.</string>
    <string name="button_capture">Capture</string>
    <string name="button_flash_on">Flash On</string>
    <string name="button_flash_off">Flash Off</string>
    <string name="button_grid_on">Grid On</string>
    <string name="button_grid_off">Grid Off</string>
    <string name="button_gallery">Gallery</string>

    <!-- image display -->
    <string name="new_photo">New Photo</string>

    <!-- gallery-->
    <string name="action_upload">Upload</string>
    <string name="action_crop">Crop</string>
    <string name="action_share">Share Via Bluetooth</string>

    <!--navigation menu-->
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_profile">Profile</string>
    <string name="navigation_item_activity">Activities</string>
    <string name="navigation_item_setting">Settings</string>
    <string name="navigation_item_comment">Comments</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="title_activity_camera">camera</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_comment">Comment</string>
    <string name="navigation_item_search">Search</string>
    <string name="profile_posts">posts</string>
    <string name="profile_followers">followers</string>
    <string name="profile_followings">followings</string>

    <!-- Plurals for feed_likes_count -->
    <plurals name="feed_likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="title_activity_image_display">ImageDisplayActivity</string>

    <string name="profile_follow">follow</string>
    <string name="profile_following">following</string>
    <string name="profile_unfollow">unfollow</string>
    <string name="search">search</string>

    <string name="search_suggest">User Suggestions</string>
    <string name="title_activity_search_results">SearchResult</string>
    <string name="request_permission">The application needs permission to run.</string>
    <string name="camera_error">This device doesn\\\'t support Camera2 API.</string>

    <!-- Filters -->
    <string-array name="filters_array">
        <item>No Filter</item>
        <item>Emboss</item>
        <item>Gaussian Blur</item>
        <item>Glass Sphere</item>
        <item>Grayscale</item>
        <item>Monochrome</item>
        <item>Sepia</item>
        <item>Sketch</item>
    </string-array>
</resources>
